[gd_scene load_steps=12 format=2]

[ext_resource path="res://script/main_screen.gd" type="Script" id=1]
[ext_resource path="res://assests/volume.png" type="Texture" id=2]
[ext_resource path="res://assests/CLOSE copy 3.png" type="Texture" id=3]
[ext_resource path="res://cenas/container_level_iniciante.tscn" type="PackedScene" id=4]
[ext_resource path="res://assests/aprender_notas.png" type="Texture" id=6]
[ext_resource path="res://assests/piano.jpg" type="Texture" id=18]
[ext_resource path="res://assests/musica_piano.ogg" type="AudioStream" id=20]
[ext_resource path="res://assests/mute.png" type="Texture" id=34]

[sub_resource type="Animation" id=1]
length = 16.0
loop = true

[sub_resource type="Animation" id=3]
length = 2.0
tracks/0/type = "value"
tracks/0/path = NodePath("container_level_iniciante:position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 1, 2 ),
"transitions": PoolRealArray( 1, 1, 1 ),
"update": 0,
"values": [ Vector2( 622.773, 279.276 ), Vector2( 21.7903, -21.8449 ), Vector2( 625.292, 276.756 ) ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("container_level_iniciante:rotation_degrees")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0, 1, 2 ),
"transitions": PoolRealArray( 1, 1, 1 ),
"update": 0,
"values": [ 0.0, 0.0, 0.0 ]
}
tracks/2/type = "value"
tracks/2/path = NodePath("container_level_iniciante:scale")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"times": PoolRealArray( 0, 1, 2 ),
"transitions": PoolRealArray( 1, 1, 1 ),
"update": 0,
"values": [ Vector2( 0.1, 0.1 ), Vector2( 1, 1 ), Vector2( 0.1, 0.1 ) ]
}
tracks/3/type = "value"
tracks/3/path = NodePath("container_level_iniciante:modulate")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/keys = {
"times": PoolRealArray( 0, 1, 2 ),
"transitions": PoolRealArray( 1, 1, 1 ),
"update": 0,
"values": [ Color( 1, 1, 1, 0 ), Color( 1, 1, 1, 1 ), Color( 1, 1, 1, 0 ) ]
}
tracks/4/type = "method"
tracks/4/path = NodePath(".")
tracks/4/interp = 1
tracks/4/loop_wrap = true
tracks/4/imported = false
tracks/4/enabled = true
tracks/4/keys = {
"times": PoolRealArray( 1 ),
"transitions": PoolRealArray( 1 ),
"values": [ {
"args": [ "pausa_2" ],
"method": "emit_signal"
} ]
}

[sub_resource type="Animation" id=4]
length = 9.0
loop = true
tracks/0/type = "value"
tracks/0/path = NodePath("aprender_notas2:position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 4.5, 9 ),
"transitions": PoolRealArray( 1, 1, 1 ),
"update": 0,
"values": [ Vector2( 450, 180 ), Vector2( 515, 180 ), Vector2( 450, 180 ) ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("aprender_notas2:rotation_degrees")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0, 4.5, 9 ),
"transitions": PoolRealArray( 1, 1, 1 ),
"update": 0,
"values": [ 0.0, 0.0, 0.0 ]
}
tracks/2/type = "value"
tracks/2/path = NodePath("aprender_notas2:scale")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"times": PoolRealArray( 0, 4.5, 9 ),
"transitions": PoolRealArray( 1, 1, 1 ),
"update": 0,
"values": [ Vector2( 1, 1 ), Vector2( 0.7, 0.7 ), Vector2( 1, 1 ) ]
}

[node name="main_screen" type="Node2D"]
position = Vector2( -5.24514, -11.0307 )
script = ExtResource( 1 )

[node name="piano" type="Sprite" parent="."]
position = Vector2( 679.741, 300.587 )
scale = Vector2( 1.93973, 1.6932 )
texture = ExtResource( 18 )
__meta__ = {
"_edit_lock_": true
}

[node name="anim" type="AnimationPlayer" parent="."]
autoplay = "logo"
anims/logo = SubResource( 1 )

[node name="mute" type="TouchScreenButton" parent="."]
position = Vector2( 1294.25, 533.031 )
normal = ExtResource( 34 )

[node name="volume" type="TouchScreenButton" parent="."]
position = Vector2( 1294.25, 534.031 )
z_index = 1
normal = ExtResource( 2 )

[node name="musica" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 20 )
autoplay = true

[node name="aprender_notas2" type="TouchScreenButton" parent="."]
position = Vector2( 450, 180 )
normal = ExtResource( 6 )

[node name="container_level_iniciante" parent="." instance=ExtResource( 4 )]
modulate = Color( 1, 1, 1, 0 )
position = Vector2( 622.773, 279.276 )
scale = Vector2( 0.1, 0.1 )

[node name="Levelslimpo" parent="container_level_iniciante" index="5"]
position = Vector2( 664.53, 318.028 )

[node name="aprender_notas" type="AnimationPlayer" parent="."]
anims/surgindo = SubResource( 3 )

[node name="movimento" type="AnimationPlayer" parent="."]
autoplay = "move"
playback_speed = 0.4
anims/move = SubResource( 4 )

[node name="quit" type="Button" parent="."]
margin_left = 1293.25
margin_top = 30.0307
margin_right = 1342.25
margin_bottom = 73.0307
icon = ExtResource( 3 )
flat = true

[connection signal="pausa" from="." to="." method="_on_main_screen_pausa"]
[connection signal="pausa_2" from="." to="." method="_on_main_screen_pausa_2"]
[connection signal="pressed" from="mute" to="." method="_on_mute_pressed"]
[connection signal="pressed" from="volume" to="." method="_on_volume_pressed"]
[connection signal="pressed" from="aprender_notas2" to="." method="_on_aprender_notas2_pressed"]
[connection signal="pressed" from="container_level_iniciante/home_aprender" to="." method="_on_home_aprender_pressed"]
[connection signal="pressed" from="container_level_iniciante/nivel_1/level_1" to="." method="_on_level_1_pressed"]
[connection signal="pressed" from="container_level_iniciante/nivel_1/level_2" to="." method="_on_level_2_pressed"]
[connection signal="pressed" from="container_level_iniciante/nivel_1/level_3" to="." method="_on_level_3_pressed"]
[connection signal="pressed" from="container_level_iniciante/nivel_1/level_4" to="." method="_on_level_4_pressed"]
[connection signal="pressed" from="container_level_iniciante/nivel_1/level_5" to="." method="_on_level_5_pressed"]
[connection signal="pressed" from="container_level_iniciante/nivel_1/level_6" to="." method="_on_level_6_pressed"]
[connection signal="pressed" from="container_level_iniciante/nivel_1/level_7" to="." method="_on_level_7_pressed"]
[connection signal="pressed" from="container_level_iniciante/nivel_1/level_8" to="." method="_on_level_8_pressed"]
[connection signal="pressed" from="container_level_iniciante/nivel_2/level_9" to="." method="_on_level_9_pressed"]
[connection signal="pressed" from="container_level_iniciante/nivel_2/level_10" to="." method="_on_level_10_pressed"]
[connection signal="pressed" from="container_level_iniciante/nivel_2/level_11" to="." method="_on_level_11_pressed"]
[connection signal="pressed" from="container_level_iniciante/nivel_2/level_12" to="." method="_on_level_12_pressed"]
[connection signal="pressed" from="container_level_iniciante/nivel_2/level_13" to="." method="_on_level_13_pressed"]
[connection signal="pressed" from="container_level_iniciante/nivel_2/level_14" to="." method="_on_level_14_pressed"]
[connection signal="pressed" from="container_level_iniciante/nivel_2/level_15" to="." method="_on_level_15_pressed"]
[connection signal="pressed" from="container_level_iniciante/nivel_2/level_16" to="." method="_on_level_16_pressed"]
[connection signal="animation_finished" from="aprender_notas" to="." method="_on_aprender_notas_animation_finished"]
[connection signal="pressed" from="quit" to="." method="_on_quit_pressed"]

[editable path="container_level_iniciante"]
